# vizia

crates/vizia_baseview/: Cargo.toml
crates/vizia_baseview/src/: application.rs  window.rs
crates/vizia_core/src/binding/: binding_view.rs  lens.rs  map.rs
crates/vizia_core/src/context/: backend.rs  event.rs  mod.rs
crates/vizia_core/src/style/: mod.rs
crates/vizia_window/src/: window_event.rs
crates/vizia_winit/src/: application.rs
